# sugar.architecture

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_api.py
app/: __init__.py  config.py  main.py
app/analytics/: placeholder.py
app/api/: health.py
app/api/v1/: dependencies.py  router.py
app/api/v1/schemas/: common.py  request.py  response.py
app/cache/: cache_manager.py
app/core/: __init__.py  engine.py  prompt_generator.py  routing.py
app/core/frameworks/: __init__.py  base.py  gibbs.py  kolb.py  kwl.py  socratic.py  what_so_what.py
app/exceptions/: handlers.py
app/llm/: __init__.py  base_provider.py  fallback.py  model_registry.py
app/llm/providers/: huggingface_provider.py  local_model.py  ollama_provider.py  openai_provider.py
app/logging_/: __init__.py  logger.py  response_logger.py
app/storage/: base_store.py  sqlite_store.py
model_versions/: registry.yaml
scripts/: generate_dataset.py  reflection_dataset.jsonl  reflection_dataset_sample.json  run_dev.sh  seed_models.py
tests/: conftest.py
tests/fixtures/: expected_prompts.json  sample_metadata.json
tests/integration/: test_api_endpoints.py  test_llm_providers.py
tests/unit/: test_cache.py  test_engine.py  test_fallback.py  test_frameworks.py  test_prompt_generator.py  test_routing.py
