[project]
name = "ai-reflection-service"
version = "1.0.0"
description = "AI-powered reflection prompt service for the Sugar Journal"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",           # async HTTP client for LLM API calls
    "aiosqlite>=0.19.0",       # async SQLite for response logs
]

[project.optional-dependencies]
local = [
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "accelerate>=0.25.0",
]
ollama = [
    "ollama>=0.1.0",
]
openai = [
    "openai>=1.6.0",
]
huggingface = [
    "huggingface-hub>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",           # for TestClient
    "ruff>=0.1.0",             # linting
    "mypy>=1.7.0",             # type checking
]
all = [
    "ai-reflection-service[local,ollama,openai,huggingface,dev]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
